# INNHABIT

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  calibration.py  ci_matrix.py  get_cal_images.py  laserdata.py  mypy.ini  occupancydata.py  stereo-test.py  stereo.py
.github/workflows/: Server.yaml  server.yaml
Diagrams/: APISections.drawio  AdvancedUseCase.drawio  ByteTrackDiagram.drawio  DockerDiagram.drawio  EdgeDeviceUsecase.drawio  EndpointDiagram.drawio  MaintenanceUseCase.drawio  SystemDiagram.drawio  UseCaseGeneral.drawio  WebsiteUseCase.drawio  edge_device_class_diagram_plain.drawio
innhabbitserver/: manage.py
innhabbitserver/api/: serializers.py  urls.py  views.py
innhabbitserver/api/test/: test_views.py
innhabbitserver/api/tests/: test_views.py
innhabbitserver/innhabbitserver/: asgi.py  wsgi.py
innhabbitserver/occupancy/: models.py
innhabit-device/: CMakeLists.txt  Doxyfile  README.md  build-linux.sh  compile_commands.json  main.cpp  settings.json
innhabit-device/include/: api_handler.h  cameraThread.h  common.h  comon.h  configuration.h  detectionThread.h  detector.h  devicePoll.h  displayThread.h  macros.h  postprocess.h  rtspStreamManager.h  tracker.h
innhabit-device/include/tracker/: people_tracker.h  tracked_person.h  utils.h  zone_type.h
innhabit-device/models/: pt_to_onnx.py
innhabit-device/src/: api_handler.cpp  better.py  cameraThread.cpp  detectionThread.cpp  detector.cpp  devicePoll.cpp  displayThread.cpp  main.cpp  postprocess.cpp  rtspStreamManager.cpp  tracker.cpp
innhabit-device/src/core/: api_handler.cpp  cameraThread.cpp  configuration.cpp  detectionThread.cpp  detector.cpp  devicePoll.cpp  displayThread.cpp  main.cpp  rtspStreamManager.cpp
innhabit-device/src/tracker/: people_tracker.cpp  person_tracker.cpp  tracked_person.cpp  utils.cpp
innhabit-server/: README.md
innhabit-server/innhabbitserver/: settings.py
innhabit-server/occupancy/migrations/: 0001_initial.py
innhabitserver/: .envb  Dockerfile  README.md  deploy.sh  docker-compose.deploy.yaml  docker-compose.yaml  example.env  manage.py  nginx.conf  requirements.txt
innhabitserver/accounts/: admin.py  forms.py  models.py  tokens.py  urls.py  utils.py  views.py
innhabitserver/accounts/migrations/: 0001_initial.py
innhabitserver/accounts/templates/: manage_users.html  view_user.html
innhabitserver/accounts/templates/registration/: activation_failure.html  add_user.html  login.html  setup_account.html
innhabitserver/api/: crypto.py  models.py  permissions.py  serializers.py  urls.py  views.py
innhabitserver/api/migrations/: 0001_initial.py  0002_alter_deviceapikey_key.py  0003_alter_deviceapikey_device.py
innhabitserver/api/tests/: test_views.py
innhabitserver/components/card/: card.html
innhabitserver/components/navbar/: navbar.html  navbar.py
innhabitserver/components/navitem/: navitem.html  navitem.py
innhabitserver/components/setup_entryboxes/: setup_entryboxes.html  setup_entryboxes.js  setup_entryboxes.py
innhabitserver/components/table/: table.html  table.py
innhabitserver/components/test_event_results/: test_event_results.html  test_event_results.py
innhabitserver/dashboard/: admin.py  middleware.py  models.py  urls.py  utils.py  views.py
innhabitserver/dashboard/components/cafeteria_day/: cafeteria_day.html  cafeteria_day.py
innhabitserver/dashboard/components/current_occupancy/: current_occupancy.html  current_occupancy.py
innhabitserver/dashboard/components/dashboards/: __init__.py
innhabitserver/dashboard/components/dashboards/all_time_plot/: all_time_plot.html  all_time_plot.js  all_time_plot.py
innhabitserver/dashboard/components/dashboards/busiest_days/: busiest_days.html  busiest_days.py
innhabitserver/dashboard/components/dashboards/card/: card.html
innhabitserver/dashboard/components/dashboards/comparison_plot/: comparison_plot.html  comparison_plot.js  comparison_plot.py
innhabitserver/dashboard/components/dashboards/daily_visitors/: daily_visitors.html  daily_visitors.py
innhabitserver/dashboard/components/dashboards/entrance_overview/: entrance_overview.html  entrance_overview.js  entrance_overview.py
innhabitserver/dashboard/components/dashboards/latest_events/: latest_events.html  latest_events.py
innhabitserver/dashboard/components/dashboards/monthly_visitors/: monthly_visitors.html  monthly_visitors.py
innhabitserver/dashboard/components/dashboards/occupants/: occupants.html  occupants.py
innhabitserver/dashboard/components/dashboards/smallbox/: card.html  card.py  smallbox.html  smallbox.py
innhabitserver/dashboard/components/dashboards/weekly_visitors/: weekly_visitors.html  weekly_visitors.py
innhabitserver/dashboard/components/insights/cafeteria_day/: cafeteria_day.html  cafeteria_day.py
innhabitserver/dashboard/components/insights/current_occupancy/: current_occupancy.html  current_occupancy.py
innhabitserver/dashboard/components/insights/daily_comparison/: daily_comparison.html  daily_comparison.py
innhabitserver/dashboard/migrations/: 0001_initial.py
innhabitserver/dashboard/templates/: admin_dashboard.html  dates.html  insights.html  new_date.html  new_dates.html  public_dashboard.html
innhabitserver/dashboard/tests/: test_test_event_results.py
innhabitserver/innhabitserver/: asgi.py  settings.py  urls.py  wsgi.py
innhabitserver/occupancy/: admin.py  forms.py  models.py  urls.py  views.py
innhabitserver/occupancy/migrations/: 0001_initial.py  0002_device.py  0003_deviceimage.py  0004_alter_device_entrance_devicesettings.py  0005_testentryevent_testexitevent.py  0006_alter_entryevent_timestamp_alter_exitevent_timestamp_and_more.py
innhabitserver/occupancy/templates/: add_test_events.html  base.html  configuration.html  configure_entrance.html  export.html  index.html  select_test_entrance.html  test_events.html
innhabitserver/theme/static_src/: tailwind.config.js
innhabitserver/theme/templates/: base.html
onedong/: README.md  main.cpp  main.py
yolov/: augment.py  convert.py  preview.py  requirements.txt  train.py
(+6 files in other folders)
